--- a/Coord/packages.config
+++ b/Coord/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Costura.Fody" version="3.2.0" targetFramework="net472" />
-  <package id="Fody" version="3.3.2" targetFramework="net472" developmentDependency="true" />
+  <package id="Costura.Fody" version="3.3.3" targetFramework="net472" />
+  <package id="Fody" version="4.0.2" targetFramework="net472" developmentDependency="true" />
+  <package id="MathConverter" version="1.2.1.5" targetFramework="net472" />
   <package id="WpfMath" version="0.6.0" targetFramework="net472" />
 </packages>
