--- a/CoordAnimation/packages.config
+++ b/CoordAnimation/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MathConverter" version="1.2.1.5" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
+  <package id="Xceed.Products.Wpf.Toolkit.AvalonDock" version="3.8.19076.18510" targetFramework="net48" />
+  <package id="Xceed.Wpf.AvalonDock" version="3.8.19076.18510" targetFramework="net48" />
+  <package id="Xceed.Wpf.Toolkit" version="3.8.19076.18510" targetFramework="net48" />
 </packages>
