--- a/CoordSpec/CoordSpec.csproj
+++ b/CoordSpec/CoordSpec.csproj
@@ -44,17 +44,15 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="BenLib">
-      <HintPath>..\..\BenLib\BenLib\bin\Debug\BenLib.dll</HintPath>
+    <Reference Include="BenLib.Framework, Version=2018.9.11.1902, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\BenLib\BenLib.Framework\bin\Debug\BenLib.Framework.dll</HintPath>
     </Reference>
     <Reference Include="BenLib.Standard">
       <HintPath>..\..\BenLib\BenLib.Standard\bin\Debug\netstandard2.0\BenLib.Standard.dll</HintPath>
     </Reference>
     <Reference Include="BenLib.WPF">
       <HintPath>..\..\BenLib\BenLib.WPF\bin\Debug\BenLib.WPF.dll</HintPath>
-    </Reference>
-    <Reference Include="CoordLib">
-      <HintPath>..\CoordLib\bin\Debug\CoordLib.dll</HintPath>
     </Reference>
     <Reference Include="MathConverter, Version=1.2.1.5, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MathConverter.1.2.1.5\lib\net40-client\MathConverter.dll</HintPath>
@@ -90,6 +88,7 @@
     <Compile Include="Contents\DoublePendulum\DoublePendulum.cs" />
     <Compile Include="Contents\DoublePendulum\DPContent.cs" />
     <Compile Include="Contents\ELC\ELC.cs" />
+    <Compile Include="Contents\Koch.cs" />
     <Compile Include="Contents\TPEAnim\Deriv.cs" />
     <None Include="Contents\TPEAnim\MAF.cs" />
     <None Include="Contents\TPEAnim\TPEAnimContent.cs" />
@@ -157,6 +156,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Coord.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CoordLib\CoordLib.csproj">
+      <Project>{e2ca3fac-92d4-4fea-a1af-a2f04fcbddba}</Project>
+      <Name>CoordLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
