--- a/CoordAnimation/packages.config
+++ b/CoordAnimation/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FSharp.Core" version="4.7.0" targetFramework="net48" />
   <package id="MathConverter" version="1.2.1.5" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
   <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net48" />
